remove padding setting and calculate it

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 				</label>
 			</div>
 
-			<div class="input">
+			<!-- <div class="input">
 				<label title="Inner space of area">
 					<span>Padding</span>
 					<input class="field" id="padding" placehoder="Padding" type="number" min="0" max="999" maxlength="3" step="0.1" />
 				</label>
-			</div>
+			</div> -->
 
 			<div class="input">
 				<label title="Stroke width">
