--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 		</div>
 		<div class="right fields">
 
+			<!-- <div class="checkbox">
+				<div class="label" title="Show help and rulers">
+					<input type="checkbox" id="help" />
+					<div class="mark">Help</div>
+				</div>
+			</div> -->
+
+			<div class="button">
+				<button id="showHelp">Rulers</button>
+			</div>
+
 			<div class="button">
 				<button id="download">Export</button>
 			</div>
