add export function

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</div>
 
 			<div class="button">
-				<button id="download">Export</button>
+				<a class="button" id="download" target="_blank" title="Export SVG">Export</a>
 			</div>
 
 		</div>
