rename size options

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 				<div class="label" title="Size the logo is used at">
 					<span>Size</span>
 					<select id="size" class="field" data-parse="number">
-						<option value="4">S</option>
-						<option value="3">M</option>
-						<option value="2">L</option>
-						<option value="1">XL</option>
+						<option value="4">4</option>
+						<option value="3">3</option>
+						<option value="2">2</option>
+						<option value="1">1</option>
 					</select>
 				</div>
 			</div>
